# asyncodbc

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  conftest.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
asyncodbc/: __init__.py  connection.py  cursor.py  pool.py  utils.py
ci/: Dockerfile  Makefile
docs/: conf.py  examples.rst  index.rst  tuning.rst
examples/: example_complex_queries.py  example_context_managers.py  example_pool.py  example_simple.py
tests/: conftest.py  test_connection.py  test_cursor.py  test_pool.py  test_slow.py
